Fix de entrega 06

--- a/clase06/views/realTimeProducts.handlebars
+++ b/clase06/views/realTimeProducts.handlebars
@@ -53,4 +53,5 @@
     </table>
 </div>
 <script src="/socket.io/socket.io.js"></script>
-<script src="static/js/realTimeProducts.js"></script>
+<!--TODO: NO SE SI ESTO ESTA BIEN-->
+<script src="../static/js/realTimeProducts.js"></script>
