--- a/clase08/src/views/home.hbs
+++ b/clase08/src/views/home.hbs
@@ -10,4 +10,4 @@
     </table>
     <p id="empty-state" style="display: none;">No hay productos cargados.</p>
 </div>
-<script src="../static/js/home.js"></script>
+<script src="../js/home.js"></script>
