--- a/clase08/src/views/realTimeProducts.hbs
+++ b/clase08/src/views/realTimeProducts.hbs
@@ -43,4 +43,4 @@
     <p id="empty-state" style="display: none;">No hay productos cargados.</p>
 </div>
 <script src="/socket.io/socket.io.js"></script>
-<script src="../static/js/realTimeProducts.js"></script>
+<script src="../js/realTimeProducts.js"></script>
