Task for class 9, filter comments with TODO, to find questions

--- a/clase06/views/realTimeProducts.handlebars
+++ b/clase06/views/realTimeProducts.handlebars
@@ -53,5 +53,5 @@
     </table>
 </div>
 <script src="/socket.io/socket.io.js"></script>
-<!--TODO: NO SE SI ESTO ESTA BIEN-->
+<!--HELP: NO SE SI ESTO ESTA BIEN-->
 <script src="../static/js/realTimeProducts.js"></script>
